Test/Reconstruction/Arith/ArithMulSign.expected
Test/Reconstruction/Arith/ArithMulSign.lean:6:2: error: type mismatch
  _uniq.410
has type
  a + 3 > Int.ofNat 0 → (a + 3) ^ 2 > 0 : Prop
but is expected to have type
  a + 3 > 0 → (a + 3) ^ 2 > 0 : Prop
Test/Reconstruction/Arith/ArithMulSign.lean:12:2: error: application type mismatch
  combineSigns₃ (powNegOdd _uniq.1721 (Nat.odd_iff.mpr rfl)) (powPos _uniq.1693)
argument
  powPos _uniq.1693
has type
  a ^ 2 > 0 : Prop
but is expected to have type
  Pow.pow a 2 > 0 : Prop
Test/Reconstruction/Arith/ArithMulSign.lean:21:2: error: application type mismatch
  combineSigns₂ (powPos _uniq.3314)
argument
  powPos _uniq.3314
has type
  b ^ 2 > 0 : Prop
but is expected to have type
  Pow.pow b 2 > 0 : Prop
Test/Reconstruction/Arith/ArithMulSign.lean:24:2: error: type mismatch
  _uniq.5807
has type
  a < Int.ofNat 0 → b < OfNat.ofNat 0 → zToR (Pow.pow a 3) * Pow.pow b 3 > 0 : Prop
but is expected to have type
  a < 0 → b < 0 → ↑a ^ 3 * b ^ 3 > 0 : Prop
Test/Reconstruction/Arith/ArithMulSign.lean:33:2: error: application type mismatch
  combineSigns₂ (powPos _uniq.8568)
argument
  powPos _uniq.8568
has type
  b ^ 2 > 0 : Prop
but is expected to have type
  Pow.pow b 2 > 0 : Prop
